--- a/UserAccessSystem.Tests/UserAccessSystem.Tests.csproj
+++ b/UserAccessSystem.Tests/UserAccessSystem.Tests.csproj
@@ -92,8 +92,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -106,6 +104,9 @@
       <Project>{2765A290-7670-4B0E-A39E-3ACDD2E0CF69}</Project>
       <Name>UserAccessSystem</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
