new web api test link, styles for web api test response and add user popup

--- a/UserAccessSystem.DatabaseAccess/UserAccessSystem.DatabaseAccess.csproj
+++ b/UserAccessSystem.DatabaseAccess/UserAccessSystem.DatabaseAccess.csproj
@@ -50,6 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppContext.cs" />
+    <Compile Include="Migrations\201612131556244_change User Id type.cs" />
+    <Compile Include="Migrations\201612131556244_change User Id type.Designer.cs">
+      <DependentUpon>201612131556244_change User Id type.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,6 +73,11 @@
     <Content Include="Scripts\jquery.bootgrid.fa.min.js" />
     <Content Include="Scripts\jquery.bootgrid.js" />
     <Content Include="Scripts\jquery.bootgrid.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612131556244_change User Id type.resx">
+      <DependentUpon>201612131556244_change User Id type.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
