changed R# setting (use this.) - refactor, moved bootgrid styles to main project

--- a/UserAccessSystem/UserAccessSystem.csproj
+++ b/UserAccessSystem/UserAccessSystem.csproj
@@ -188,6 +188,8 @@
     <Content Include="Content\images\ui-icons_cc0000_256x240.png" />
     <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\jquery.bootgrid.css" />
+    <Content Include="Content\jquery.bootgrid.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
