territory model/database table/service/migrations + code cleanup/refactoring

--- a/UserAccessSystem.DatabaseAccess/UserAccessSystem.DatabaseAccess.csproj
+++ b/UserAccessSystem.DatabaseAccess/UserAccessSystem.DatabaseAccess.csproj
@@ -54,7 +54,12 @@
     <Compile Include="Migrations\201612131556244_change User Id type.Designer.cs">
       <DependentUpon>201612131556244_change User Id type.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612181138525_add territory class.cs" />
+    <Compile Include="Migrations\201612181138525_add territory class.Designer.cs">
+      <DependentUpon>201612181138525_add territory class.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Territory.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -75,6 +80,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201612131556244_change User Id type.resx">
       <DependentUpon>201612131556244_change User Id type.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612181138525_add territory class.resx">
+      <DependentUpon>201612181138525_add territory class.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
