Add territory functionality

--- a/UserAccessSystem/UserAccessSystem.csproj
+++ b/UserAccessSystem/UserAccessSystem.csproj
@@ -234,6 +234,7 @@
     <Content Include="Scripts\TypeScript\tsconfig.json" />
     <None Include="Views\Home\AddUserPopup.cshtml" />
     <Content Include="Views\Home\ApiTests.cshtml" />
+    <None Include="Views\Territory\AddTerritoryPopup.cshtml" />
     <None Include="Views\Territory\Index.cshtml" />
     <None Include="Views\User\EditUser.cshtml" />
   </ItemGroup>
@@ -253,6 +254,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="Scripts\TypeScript\AddTerritory.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\IInterface.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\AddUser.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\EditUser.ts" />
