--- a/UserAccessSystem/UserAccessSystem.csproj
+++ b/UserAccessSystem/UserAccessSystem.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AppModels\AssignUsersModel.cs" />
     <Compile Include="Models\AppModels\AssignUserToTerritoryModel.cs" />
     <Compile Include="Models\AppModels\CustomControlsModels\DropDownListViewModel.cs" />
     <Compile Include="Models\AppModels\CustomControlsModels\TerritoriesGridModel.cs" />
